api calling bug removed

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -29,16 +29,30 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<h4>Already have an Account ?<a href="signin.html">  Sign In »</a> </h4>
 			</div>
 			<div class="login-body">
-				<form class="wow fadeInUp animated" data-wow-delay=".7s" (ngSubmit)="formSubmit()">
-					<input type="text" name="firstname" placeholder="First Name" required="" [(ngModel)]="data.firstname">
-					<input type="text" name="lastname" placeholder="Last Name" required="" [(ngModel)]="data.lastname">
-					<input type="email" name="email" class="email" placeholder="Email Address" required="" [(ngModel)]="data.email">
-					<input type="password" name="password" class="lock" placeholder="Password" [(ngModel)]="data.password">
-					<input type="text" name="gender" placeholder="Gender" required="" [(ngModel)]="data.gender">
-					<input type="text" name="country" placeholder="Country" required="" [(ngModel)]="data.country">
-					<input type="text" name="state" placeholder="State" required="" [(ngModel)]="data.state">
-					<input type="text" name="address" placeholder="Address" required="" [(ngModel)]="data.address">
-					<input type="submit" name="Register" value="Register">
+				<form [formGroup]="rForm" class="wow fadeInUp animated" data-wow-delay=".7s" (ngSubmit)="formSubmit()">
+					<input type="text" formControlName="fname"  placeholder="First Name" required="" [(ngModel)]="data.firstname">
+						<div class="alert" *ngIf="!rForm.controls['fname'].valid && rForm.controls['fname'].touched">This is required</div>
+					<input type="text"  formControlName="lname" placeholder="Last Name" required="" [(ngModel)]="data.lastname">
+					<div class="alert" *ngIf="!rForm.controls['lname'].valid && rForm.controls['lname'].touched">This is required</div>
+					<input type="email"  formControlName="email" style="font-size: 1em; padding: 0.9em 1em;width: 100%;color: #999;outline: none;border: 1px solid #E2DCDC;background: #FFFFFF;margin: 0em 0em 1em 0em;" class="email" placeholder="Email Address" required="" [(ngModel)]="data.email">
+					<div class="alert" *ngIf="!rForm.controls['email'].valid && rForm.controls['email'].touched">This is required</div>
+					<input type="password"  class="lock" formControlName="password" placeholder="Password" [(ngModel)]="data.password">
+					<div class="alert" *ngIf="!rForm.controls['password'].valid && rForm.controls['password'].touched">This is required</div>
+					<!-- <input type="password" name="confirmpassword" class="lock" formControlName="conformpassword" placeholder="Confirm Password" [(ngModel)]="data.confirmpassword"> -->
+					<select required="" [(ngModel)]="data.country" id="country" formControlName="country" style="font-size: 1em; padding: 0.9em 1em;width: 100%;color: #999;outline: none;border: 1px solid #E2DCDC;background: #FFFFFF;margin: 0em 0em 1em 0em;"><option>Select country</option></select>
+					<div class="alert" *ngIf="!rForm.controls['country'].valid && rForm.controls['country'].touched">This is required</div>
+					<select required="" [(ngModel)]="data.state" formControlName="state" id="state" placeholder="Select State" style="font-size: 1em; padding: 0.9em 1em;width: 100%;color: #999;outline: none;border: 1px solid #E2DCDC;background: #FFFFFF;margin: 0em 0em 1em 0em;"><option>Select State</option></select>
+					<div class="alert" *ngIf="!rForm.controls['state'].valid && rForm.controls['state'].touched">This is required</div>
+					<input type="text" formControlName="address" placeholder="Address" required="" [(ngModel)]="data.address">
+					<div class="alert" *ngIf="!rForm.controls['address'].valid && rForm.controls['address'].touched">This is required</div>
+					 <fieldset id="group1" style="text-align: center;">
+        			 <LABEL>Gender</LABEL>
+        			 <br>
+       					 Male:<input type="radio" value="male" formControlName="gender" [(ngModel)]="data.gender" >&nbsp;&nbsp;&nbsp;
+        				 Female:<input type="radio" value="female"  formControlName="gender" [(ngModel)]="data.gender" >
+    				</fieldset>
+    				
+					<input type="submit"  value="Register">
 				</form>
 			</div>
 		</div>
@@ -48,25 +62,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	
 	<!--//footer-->				
 	<!--search jQuery-->
-	<script src="/js/main.js"></script>
+	
 	<!--//search jQuery-->
 	<!--smooth-scrolling-of-move-up-->
-	<script type="text/javascript">
-		$(document).ready(function() {
-		
-			var defaults = {
-				containerID: 'toTop', // fading element id
-				containerHoverID: 'toTopHover', // fading element hover id
-				scrollSpeed: 1200,
-				easingType: 'linear' 
-			};
-			
-			$().UItoTop({ easingType: 'easeOutQuart' });
-			
-		});
-	</script>
+	
 	<!--//smooth-scrolling-of-move-up-->
 	<!--Bootstrap core JavaScript
     ================================================== -->
     <!--Placed at the end of the document so the pages load faster -->
-    <script src="js/bootstrap.js"></script>
+    
