social login updates

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 
 	<!--header-->
-	
+
 	<!--//header-->
 	<!--breadcrumbs-->
 	<div class="breadcrumbs">
@@ -29,10 +29,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<h4>Welcome back to Modern Shoppe ! <br> Not a Member? <a href="register.html">  Register Now »</a> </h4>
 			</div>
 			<div class="login-body wow fadeInUp animated" data-wow-delay=".7s">
-				<form>
-					<input type="text" class="user" name="email" placeholder="Enter your email" required="">
-					<input type="password" name="password" class="lock" placeholder="Password">
-					<input type="submit" name="Sign In" value="Sign In">
+				<form [formGroup]="rForm" (ngSubmit)="login()">
+					<input type="text" class="user"  placeholder="Enter your email" required="" formControlName="email"  placeholder="First Name" required="" [(ngModel)]="data.email">
+					<div class="alert" *ngIf="!rForm.controls['email'].valid && rForm.controls['email'].touched">This is required</div>
+					<input type="password"  formControlName="password" class="lock" placeholder="Password" required="" [(ngModel)]="data.password">
+					<div class="alert" *ngIf="!rForm.controls['password'].valid && rForm.controls['password'].touched">This is required</div>
+					<input type="submit" value="Sign In"  >
 					<div class="forgot-grid">
 						<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Remember me</label>
 						<div class="forgot">
@@ -45,30 +47,32 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 		<div class="login-page-bottom">
 			<h5> - OR -</h5>
-			<div class="social-btn"><a href="#"><i>Sign In with Facebook</i></a></div>
-			<div class="social-btn sb-two"><a href="#"><i>Sign In with Twitter</i></a></div>
+			<div class="social-btn"><a  (click)="socialLogin('facebook')" *ngIf="!(user | async)?.uid" ><i>Sign In with Facebook</i></a></div>
+			<div class="social-btn sb-two"><a (click)="socialLogin('twitter')" *ngIf="!(user | async)?.uid"><i>Sign In with Twitter</i></a></div>
+			<div class="social-btn sb-three"><a (click)="socialLogin('google')" *ngIf="!(user | async)?.uid"><i>Sign In with Googlee</i></a></div>
 		</div>
 	</div>
+	<ng2-toasty></ng2-toasty>
 	<!--//login-->
 	<!--footer-->
-	
-	<!--//footer-->			
+
+	<!--//footer-->
 	<!--search jQuery-->
 	<script src="js/main.js"></script>
 	<!--//search jQuery-->
 	<!--smooth-scrolling-of-move-up-->
 	<script type="text/javascript">
 		$(document).ready(function() {
-		
+
 			var defaults = {
 				containerID: 'toTop', // fading element id
 				containerHoverID: 'toTopHover', // fading element hover id
 				scrollSpeed: 1200,
-				easingType: 'linear' 
+				easingType: 'linear'
 			};
-			
+
 			$().UItoTop({ easingType: 'easeOutQuart' });
-			
+
 		});
 	</script>
 	<!--//smooth-scrolling-of-move-up-->
