--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
     <!--STYLES END-->
  
 
-
+<ng2-slim-loading-bar  [height]="'4px'"></ng2-slim-loading-bar>
   <app-header></app-header>
    <router-outlet></router-outlet>
   <app-footer></app-footer>
