--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,10 +24,10 @@
     
     <!--STYLES END-->
  
-
-<ng2-slim-loading-bar  [height]="'4px'"></ng2-slim-loading-bar>
+<ng2-slim-loading-bar></ng2-slim-loading-bar>
   <app-header></app-header>
    <router-outlet></router-outlet>
+   <ng2-toasty></ng2-toasty>
   <app-footer></app-footer>
 
 
