--- a/src/app/components/verify/verify.component.html
+++ b/src/app/components/verify/verify.component.html
@@ -1,3 +1,12 @@
-<p>
-  verify works!
-</p>
+<div class="login-page Verification">
+		<div class="title-info wow fadeInUp animated" data-wow-delay=".5s">
+			<h3 class="title">Verification</h3>
+			</div>
+<div class="widget-shadow">
+			<div class="login-top wow fadeInUp animated" data-wow-delay=".7s">
+				
+			</div><div class="login-body wow fadeInUp animated" data-wow-delay=".7s">
+				<p> Open your Email {{userData}} to verify the account  </p>
+			</div>
+			</div>
+	</div>
