--- a/src/app/components/forget-pass/forget-pass.component.html
+++ b/src/app/components/forget-pass/forget-pass.component.html
@@ -6,9 +6,9 @@
 			<div class="login-top wow fadeInUp animated" data-wow-delay=".7s">
 				<h4>Enter Your email</h4>
 			</div><div class="login-body wow fadeInUp animated" data-wow-delay=".7s">
-				<form >
-					<input type="email" style="font-size: 1em;padding: 0.9em 1em;width: 100%;color: #999;outline: none;border: 1px solid #E2DCDC;background: #FFFFFF;margin: 0em 0em 1em 0em;" class="user"  placeholder="Enter your email" required=""  placeholder="Email" required="" >
-					<div class="alert">This is required</div>
+				<form [formGroup]="rForm"  (ngSubmit)="forgetPass()">
+					<input type="email" style="font-size: 1em;padding: 0.9em 1em;width: 100%;color: #999;outline: none;border: 1px solid #E2DCDC;background: #FFFFFF;margin: 0em 0em 1em 0em;" class="user"  placeholder="Enter your email" required="" formControlName="email"  placeholder="Email" required=""  [(ngModel)]="data.email">
+					<div class="alert" *ngIf="!rForm.controls['email'].valid && rForm.controls['email'].touched">This is required</div>
 					<input type="submit" value="Change Password">	
 				</form>
 			</div>
