--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 .slim-loading-bar {
-     position: fixed; /* Set the navbar to fixed position */
+     position: fixed; 
     
     margin: 0;
     padding: 0;
@@ -10,19 +10,18 @@
     z-index: 99999;
 }
 
-/* Styling for the Slim Loading Progress Bar itself */
 .slim-loading-bar-progress {
     margin: 0;
     padding: 0;
     z-index: 99998;
     background-color: green;
     color: green;
-    box-shadow: 0 0 10px 0; /* Inherits the font color */
+    box-shadow: 0 0 10px 0; 
     height: 4px;
     opacity: 0;
     position: fixed;
 
-    /* Add CSS3 styles for transition smoothing */
+    
     -webkit-transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
     -o-transition: all 0.5s ease-in-out;
