--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,8 @@
 		<div class="top-header navbar navbar-default"><!--header-one-->
 			<div class="container">
 				<div class="nav navbar-nav wow fadeInLeft animated" data-wow-delay=".5s">
-					<p>Welcome to Modern Shoppe <a href="/register">Register </a> Or <a href="/login">Sign In </a></p>
+          <div *ngIf="check==0;else profile" ><p>Welcome to Modern Shoppe <a  href="/register">Register </a> Or <a href="/login">Sign In </a></p></div>
+          <ng-template #profile><a href="/profile">Profile</a></ng-template>
 				</div>
 				<div class="nav navbar-nav navbar-right social-icons wow fadeInRight animated" data-wow-delay=".5s">
 					<ul>
@@ -22,7 +23,7 @@
 				<div class="nav navbar-nav header-two-left">
 					<ul>
 						<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+1234 567 892</li>
-						<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">mail@example.com</a></li>			
+						<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">mail@example.com</a></li>
 					</ul>
 				</div>
 				<div class="nav navbar-nav logo wow zoomIn animated" data-wow-delay=".7s">
@@ -30,12 +31,12 @@
 				</div>
 				<div class="nav navbar-nav navbar-right header-two-right">
 					<div class="header-right my-account">
-						<a href="contact.html"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> CONTACT US</a>						
+						<a href="contact.html"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> CONTACT US</a>
 					</div>
 					<div class="header-right cart">
 						<a href="#"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
 						<h4><a href="checkout.html">
-								<span class="simpleCart_total"> $0.00 </span> (<span id="simpleCart_quantity" class="simpleCart_quantity"> 0 </span>) 
+								<span class="simpleCart_total"> $0.00 </span> (<span id="simpleCart_quantity" class="simpleCart_quantity"> 0 </span>)
 						</a></h4>
 						<div class="cart-box">
 							<p><a href="javascript:;" class="simpleCart_empty">Empty cart</a></p>
@@ -59,61 +60,10 @@
 						</button>
 					</div>
 					<!--navbar-header-->
-					<ul *ngFor="let keysub of keysub" class="multi-column-dropdown ">
-												
-            		<li id={{subcat[keysub].id}} ><a> {{subcat[keysub].name}}</a></li>					
-					</ul><div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav top-nav-info">
-							<li><a href="index.html" class="active">Home</a></li>
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Baby<b class="caret"></b></a>
-								<ul class="dropdown-menu multi-column multi-column1">
-									<div class="row">
-										<div class="col-sm-4 menu-grids menulist1">
-											<h4>Bath & Care</h4>
-											<ul *ngFor="let key of keys" class="multi-column-dropdown ">
-												
-            									<li id={{userData[key].id}} ><a class="list" (click)="sub(userData[key].id)"> {{userData[key].name}}</a></li>					
-											</ul>
-											
-										</div>																		
-										<div class="col-sm-2 menu-grids">
-											<h4>Baby Clothes</h4>
-											<ul class="multi-column-dropdown">
-												<li><a class="list" href="products.html">Onesies & Rompers</a></li>
-												<li><a class="list" href="products.html">Frocks</a></li>
-												<li><a class="list" href="products.html">Socks & Tights</a></li>
-												<li><a class="list" href="products.html">Sweaters & Caps</a></li>
-												<li><a class="list" href="products.html">Night Wear</a></li>
-												<li><a class="list" href="products.html">Quilts & Wraps</a></li>
-											</ul>
-										</div>
-										<div class="col-sm-3 menu-grids">
-											<ul class="multi-column-dropdown">
-												<li><a class="list" href="products.html">Blankets</a></li>
-												<li><a class="list" href="products.html">Gloves & Mittens</a></li>
-												<h4>Shop by Age</h4>
-												<li><a class="list" href="products.html">New Born (0 - 5 M)</a></li>
-												<li><a class="list" href="products.html">5 - 10 Months</a></li>
-												<li><a class="list" href="products.html">10 - 15 Months</a></li>
-												<li><a class="list" href="products.html">15 Months Above</a></li>
-											</ul>
-										</div>
-										<div class="col-sm-3 menu-grids">
-											<ul class="multi-column-dropdown">
-												<li><h6><a class="list" href="products.html">Feeding & Nursing</a></h6></li>
-												<h4>Baby Gear</h4>
-												<li><a class="list" href="products.html">Baby Walkers</a></li>
-												<li><a class="list" href="products.html">Strollers</a></li>
-												<li><a class="list" href="products.html">Prams & Toys</a></li>
-												<li><a class="list" href="products.html">Cribs & Cradles</a></li>
-												<li><a class="list" href="products.html">Booster Seats</a></li>
-											</ul>
-										</div>
-										<div class="clearfix"> </div>
-									</div>
-								</ul>
-							</li>
+							<li><a href="/" class="active">Home</a></li>
+
 							<li class="dropdown grid">
 								<a href="#" class="dropdown-toggle list1" data-toggle="dropdown">Kids<b class="caret"></b></a>
 								<ul class="dropdown-menu multi-column multi-column2">
@@ -128,7 +78,7 @@
 												<li><a class="list" href="products.html">Swimwear</a></li>
 												<li><a class="list" href="products.html">Jumpers</a></li>
 											</ul>
-										</div>																		
+										</div>
 										<div class="col-sm-3 menu-grids">
 											<h4>Boys</h4>
 											<ul class="multi-column-dropdown">
@@ -179,71 +129,53 @@
 											<a href="products.html">
 												<div class="new-add">
 													<h5>30% OFF <br> Today Only</h5>
-												</div>	
+												</div>
 											</a>
-										</div>	
+										</div>
 										<div class="clearfix"> </div>
-									</div>	
+									</div>
 								</ul>
-							</li>				
+							</li>
 							<li class="dropdown grid">
-								<a href="#" class="dropdown-toggle list1" data-toggle="dropdown">Toys <b class="caret"></b></a>
+								<a href="#" class="dropdown-toggle list1" data-toggle="dropdown">Categories <b class="caret"></b></a>
 								<ul class="dropdown-menu multi-column multi-column4">
 									<div class="row">
-										<div class="col-sm-4 menu-grids menulist1">
-											<h4>BABY</h4>
-											<ul class="multi-column-dropdown ">
-												<li><a class="list" href="products.html">Rockers</a></li>
-												<li><a class="list" href="products.html">Rattles</a></li>
-												<li><a class="list" href="products.html">Stroller Toys</a></li>
-												<li><a class="list" href="products.html">Musical Toys </a></li>
-												<li><a class="list" href="products.html">Doll Houses</a></li>
-												<li><a class="list" href="products.html">Play Sets</a></li>
+										<div class="col-sm-4 menu-grids menulist1" style="border-right: solid 1px lightgray">
+											<h4>Categories</h4>
+                      <ul  class="multi-column-dropdown ">
+
+                        <li *ngFor="let key of keys" id={{userData[key].id}} ><a class="list" style="text-decoration: none" (click)="sub(userData[key].id)"> {{userData[key].name}}</a></li>
+
+
 											</ul>
-											<ul class="multi-column-dropdown">
-												<li><a class="list" href="products.html">Toys Dolls</a></li>
-												<li><a class="list" href="products.html">Pacifiers</a></li>
-												<li><a class="list" href="products.html">Building Sets</a></li>
-												<li><a class="list" href="products.html">Bath Toys</a></li>
-												<li><a class="list" href="products.html">Soft Toys</a></li>
-												<li><h6><a class="list" href="products.html">Special Off</a></h6></li>
-											</ul>
-										</div>																		
-										<div class="col-sm-2 menu-grids">
-											<h4>Pretend Play</h4>
-											<ul class="multi-column-dropdown">
-												<li><h6><a class="list" href="products.html">Video Games</a></h6></li>
-												<li><a class="list" href="products.html">Kitchen Sets</a></li>
-												<li><a class="list" href="products.html">Sand Toys</a></li>
-												<li><a class="list" href="products.html">Tool Sets</a></li>
-												<li><a class="list" href="products.html">Bath Toys</a></li>
-												<li><a class="list" href="products.html">Medical Set</a></li>
-											</ul>
+
 										</div>
 										<div class="col-sm-2 menu-grids">
-											<h4>Outdoor</h4>
-											<ul class="multi-column-dropdown">
-												<li><a class="list" href="products.html">Swimming</a></li>
-												<li><a class="list" href="products.html">Rideons </a></li>
-												<li><a class="list" href="products.html">Scooters</a></li>
-												<li><a class="list" href="products.html">Remote Control</a></li>
-												<li><a class="list" href="products.html">Animals</a></li>
-												<li><a class="list" href="products.html">Make up</a></li>
-											</ul>
+											<h4>Sub Categories</h4>
+                      <ul  class="multi-column-dropdown ">
+
+                        <li *ngFor="let keysub of keysub" id={{subcat[keysub].id}} ><a class="list" href="#"> {{subcat[keysub].name}}</a></li>
+
+
+
+                      </ul>
+										</div>
+										<div class="col-sm-2 menu-grids">
+
 										</div>
 										<div class="col-sm-4 menu-grids">
 											<a href="products.html">
 												<div class="new-add">
 													<h5>30% OFF <br> Today Only</h5>
 												</div>
-											</a>	
+											</a>
 										</div>
 										<div class="clearfix"> </div>
 									</div>
 								</ul>
 							</li>
 							<li><a href="codes.html">Special Offers</a></li>
-						</ul> 
+						</ul>
 						<div class="clearfix"> </div>
 						<!--//navbar-collapse-->
 						<header class="cd-main-header">
